--- a/data_bags/users/deploy.json.example
+++ b/data_bags/users/deploy.json.example
@@ -1,7 +1,7 @@
 {
   "id": "deploy",
   // generate this with: openssl passwd -1 "plaintextpassword"
-  "password": "REPLACE",
+  "password": "$1$JLWEplU/$ageCIJYEz69yjNFpaRE/K/",
   // the below should contain a list of ssh public keys which should
   // be able to login as deploy
   "ssh_keys": [
